New rule on tempfile.mktemp
The mktemp function is vulnerable to a race condition where there
is a window where the file could be created in between when the
filename was created and the file is opened.

The solution is to use NamedTemporaryFile as an atomic operation.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -84,6 +84,9 @@ precli.rules.python =
     # precli/rules/python/stdlib/telnetlib/telnetlib_cleartext.py
     PRE0018 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
 
+    # precli/rules/python/stdlib/tempfile/mktemp_race_condition.py
+    PRE0019 = precli.rules.python.stdlib.tempfile.mktemp_race_condition:MktempRaceCondition
+
     # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
     PRE0501 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
 
