Add new rule to check for no context being passed to IMAP4_SSL
If a context of unset or None is passed to IMAP4_SSL, the
implementation will default to creating an unverified context.
This means the client connection will not properly verify the
server its connecting to. The instance method of starttls is
also vulnerable.

Closes: #345

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -113,6 +113,9 @@ precli.rules.python =
     # precli/rules/python/stdlib/ftplib_unverified_context.py
     PY022 = precli.rules.python.stdlib.ftplib_unverified_context:FtplibUnverifiedContext
 
+    # precli/rules/python/stdlib/imaplib_unverified_context.py
+    PY023 = precli.rules.python.stdlib.imaplib_unverified_context:ImaplibUnverifiedContext
+
 [build_sphinx]
 all_files = 1
 build-dir = docs/build
