Add new rule to check for context=None in nntp.starttls or NNTP_SSL
If a context of unset or None is passed to NNTP_SSL, the implementation
will default to creating an unverified context. This means the client
connection will not properly verify the server its connecting to. The
instance method of starttls is also vulnerable.

Closes: #343

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -116,6 +116,9 @@ precli.rules.python =
     # precli/rules/python/stdlib/imaplib_unverified_context.py
     PY023 = precli.rules.python.stdlib.imaplib_unverified_context:ImaplibUnverifiedContext
 
+    # precli/rules/python/stdlib/nntplib_unverified_context.py
+    PY024 = precli.rules.python.stdlib.nntplib_unverified_context:NntplibUnverifiedContext
+
 [build_sphinx]
 all_files = 1
 build-dir = docs/build
