--- a/setup.cfg
+++ b/setup.cfg
@@ -119,6 +119,9 @@ precli.rules.python =
     # precli/rules/python/stdlib/nntplib_unverified_context.py
     PY024 = precli.rules.python.stdlib.nntplib_unverified_context:NntplibUnverifiedContext
 
+    # precli/rules/python/stdlib/poplib_unverified_context.py
+    PY025 = precli.rules.python.stdlib.poplib_unverified_context:PoplibUnverifiedContext
+
 [build_sphinx]
 all_files = 1
 build-dir = docs/build
