Add new rule to check for context=None in smtp.starttls or SMTP_SSL
If a context of unset or None is passed to SMTP_SSL, the implementation
will default to creating an unverified context. This means the client
connection will not properly verify the server its connecting to. The
instance method of starttls is also vulnerable.

Closes: #342

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -122,6 +122,9 @@ precli.rules.python =
     # precli/rules/python/stdlib/poplib_unverified_context.py
     PY025 = precli.rules.python.stdlib.poplib_unverified_context:PoplibUnverifiedContext
 
+    # precli/rules/python/stdlib/smtplib_unverified_context.py
+    PY026 = precli.rules.python.stdlib.smtplib_unverified_context:SmtplibUnverifiedContext
+
 [build_sphinx]
 all_files = 1
 build-dir = docs/build
