Add new rule for secrets insufficient token length
Tokens should be a sufficient length (32 bytes) to avoid
vulnerability of brute-force attacks.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -128,6 +128,9 @@ precli.rules.python =
     # precli/rules/python/stdlib/argparse_sensitive_info.py
     PY027 = precli.rules.python.stdlib.argparse_sensitive_info:ArgparseSensitiveInfo
 
+    # precli/rules/python/stdlib/secrets_weak_token.py
+    PY028 = precli.rules.python.stdlib.secrets_weak_token:SecretsWeakToken
+
 [build_sphinx]
 all_files = 1
 build-dir = docs/build
